--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href = "https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel = "stylesheet">
     <title>Personal Portfolio</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="#" class="logo"><span>Ya</span>sin</a>
+
+        <nav class="navbar">
+            <a href="#" class ="active">Portfolio</a>
+            <a href="#">Skills</a>
+            <a href="#">Experience</a>
+            <a href="#">Projects</a>
+            <a href="#">Education</a>
+        </nav>
+
+        <a href ="#" class = "contact">Reach Out To Me</a>
 </body>
 </html>
