--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
             <a href="#">Projects</a>
             <a href="#">Education</a>
         </nav>
+        <a href ="#" class = "contact">Contact</a>
+    </header>
 
-        <a href ="#" class = "contact">Reach Out To Me</a>
+
+    <section class="home">
+        <h1>Hi, I'm <span>Yasin</span><br>A devloper</h1>
+
+        <p>I go to Thaddeus Stevens school
+             of technology and I am studying computer software
+              engineering techonolgy</p>
+        
+        <div class = "btn-box">
+            <button class = "btn-1"> Hire Me</button>
+            <button class = "btn-2">Skills</button>
+        </div>
+    </div>
+    <div class = "img-box">
+        <img src = "https://i.pinimg.com/originals/28/f9/16/28f91641808b688f9a16f1cb8686ee26.jpg">
+
+    </div>
+
+    </section>
 </body>
 </html>
