--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><span>Ya</span>sin</a>
+        <a href="#" class="logo"><span>Ya</span>sin<span><br>Ab</span>di</a>
 
         <nav class="navbar">
             <a href="#" class ="active">Portfolio</a>
-            <a href="#">Skills</a>
             <a href="#">Experience</a>
-            <a href="#">Projects</a>
+            <a href="#">About</a>
             <a href="#">Education</a>
         </nav>
         <a href ="#" class = "contact">Contact</a>
@@ -23,20 +22,23 @@
 
 
     <section class="home">
-        <h1>Hi, I'm <span>Yasin</span><br>A devloper</h1>
+        <h1>Hi, I'm <span>Yasin</span><br>An Aspiring Devloper</h1>
 
        
         
         <div class = "btn-box">
             <button class = "btn-1"> Hire Me</button>
             <button class = "btn-2">Skills</button>
+            <button class = "btn-3">Projects</button>
         </div>
     </div>
     <div class = "img-box">
         <img src = "https://i.pinimg.com/originals/28/f9/16/28f91641808b688f9a16f1cb8686ee26.jpg">
 
     </div>
+</section>
 
-    </section>
+
+  
 </body>
 </html>
